--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,8 @@
  *
  *= require bootstrap.min
  *= require sb-admin-2.min
+ *= require metisMenu.min
+ *= require font-awesome.min
  *= require_tree .
  *= require_self
  */
