--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="">SB Admin v2.0</a>
+                <a class="navbar-brand" href="">Government Forms</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -270,7 +270,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Government Forms</h1>
+                    <h1></h1>
                     <p>Click bellow to fill out the specific form:</p>
                     <p>
                         <ol>
