added some form field

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -244,10 +244,16 @@
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="">First</a>
+                                    <a href="">Foreign Person’s U.S. Source Income Subject to Withholding</a>
                                 </li>
                                 <li>
-                                    <a href="">Second</a>
+                                    <a href="">Transfer of Stock Acquired Through an Employee Stock Purchase Plan Under Section 423(c)</a>
+                                </li>
+                                <li>
+                                    <a href="">Employer's Annual Information Return of Tip Income and Allocated Tips</a>
+                                </li>
+                                <li>
+                                    <a href="">Form W-2G Certain Gambling Winnings</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -269,34 +275,31 @@
 
         <div id="page-wrapper">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1></h1>
-                    <p>Click bellow to fill out the specific form:</p>
-                    <p>
-                        <ol>
-                            <li><a href="">Foreign Person’s U.S. Source Income Subject to Withholding</a></li>
-                            <li><a href="">Transfer of Stock Acquired Through an Employee Stock Purchase Plan Under Section 423(c)</a></li>
-                            <li><a href="">Employer's Annual Information Return of Tip Income and Allocated Tips</a></li>
-                            <li><a href="">Form W-2G Certain Gambling Winnings</a></li>
-                        </ol>
-                    </p>
-                </div>
-                <!-- /.col-lg-12 -->
+                    <div class="rel col-lg-6">
+                        <img width="100%" src="media/form1.png" />
+                        <input class="abs" style="top: 3%;le;left: 4%;d;width: 47%;" type="text" name="test">
+                        <input class="abs" style="top: 1%;le;left: 77%;width: 19%;height: 3%;" type="text" name="test2">
+                        <input class="abs" style="top: 4.5%;left: 77%;w;width: 19%;height: 3%;" type="text" name="test3">
+
+                    </div>
+                    <div class="col-lg-6">
+                        <img width="100%" src="media/form2.png" />
+                    </div>
             </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                </div>
-                <div class="col-lg-3 col-md-6">
-                </div>
-                <div class="col-lg-3 col-md-6">
-                </div>
-                <div class="col-lg-3 col-md-6">
-                </div>
-            </div>
-            
             <!-- /.row -->
         </div>
         <!-- /#page-wrapper -->
 
-    </div>
+</div>
+<style>
+div.rel {
+    position:relative;
+}
+input.abs {
+    display: block;
+    position: absolute;
+   /* border: none;*/
+    color: #1a34ad;
+    background:transparent;
+}
+</style>
