database setup finished

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,12 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="">Government Forms</a>
+
             </div>
             <!-- /.navbar-header -->
+            <button type="button" class="btn btn-primary header-button">Save Form</button>
+            <button type="button" class="btn btn-warning header-button">Cancel</button>
+            <button type="button" class="btn btn-danger header-button">Delete</button>
 
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -333,5 +337,8 @@ input.abs {
    /* border: none;*/
     color: #1a34ad;
     background:transparent;
+}
+.header-button {
+    margin: 8px 0;
 }
 </style>
