--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="">Government Forms</a>
+                <a class="navbar-brand" href="/">Government Forms</a>
 
             </div>
             <!-- /.navbar-header -->
@@ -280,42 +280,7 @@
         <div id="page-wrapper">
             <div class="row">
                     <div class="header col-lg-12">
-                        <img width="100%" src="media/form_header.png" />
-                    </div>
-                    <div class="rel col-lg-6">
-                        <img width="100%" src="media/form1.png" />
-                        <input class="abs" style="top: 3%;left: 4%;width: 47%;" type="text" name="13e" placeholder="13e">
-                        <input class="abs" style="top: 1%;left: 77%;width: 19%;height: 3%;" type="text" name="13f" placeholder="13f">
-                        <input class="abs" style="top: 4.5%;left: 77%;width: 19%;height: 3%;" type="text" name="13g" placeholder="13g">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13h" placeholder="13h">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13i" placeholder="13i">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13j" placeholder="13j">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13k" placeholder="13k">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13l" placeholder="13l">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="14a" placeholder="14a">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="14b" placeholder="14b">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15" placeholder="15">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15a" placeholder="15a">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15b" placeholder="15a">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15c" placeholder="15c">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15d" placeholder="15d">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15e" placeholder="15e">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15f" placeholder="">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15g" placeholder="15f">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15h" placeholder="15h">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15i" placeholder="15i">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16a" placeholder="16a">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16b" placeholder="16b">
-                         <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16c" placeholder="16c">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16d" placeholder="16d">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16e" placeholder="16e">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="17a" placeholder="17a">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="17b" placeholder="17b">
-                        <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="17c" placeholder="17c">
-                        
-                    </div>
-                    <div class="col-lg-6">
-                        <img width="100%" src="media/form2.png" />
+                        <a href="form/new">New Form</form>
                     </div>
             </div>
             <!-- /.row -->
