basic saving form functionality added

--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<p id="notice"></p>
+<%= render 'form', form_fields: @form_fields %>
 
-<%= link_to 'Edit', edit_form_path(@form) %> |
-<%= link_to 'Back', forms_path %>
+<%# link_to 'Edit', edit_form_path(@form) %> |
+<%# link_to 'Back', forms_path %>
