--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -14,8 +14,7 @@
             </div>
             <!-- /.navbar-header -->
             <button type="button" class="btn btn-primary header-button" onclick="document.getElementById('form1').submit();">Save Form</button>
-            <button type="button" class="btn btn-warning header-button">Cancel</button>
-            <button type="button" class="btn btn-danger header-button">Delete</button>
+            <button type="button" onclick="history.back();" class="btn btn-warning header-button">Cancel</button>
 
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -280,46 +279,48 @@
         <div id="page-wrapper">
             <div class="row">
                     <div class="header col-lg-12">
-                        <img width="100%" src="/
+                        <img width="100%"  src="/
 media/form_header.png" />
                     </div>
                     <div class="rel col-lg-6">
                         <img width="100%" src="/
 media/form1.png" />
-                        <form id="form1" action="/form/save">
-                          <input class="abs" style="top: 3%;left: 4%;width: 47%;" type="text" name="13e" placeholder="13e">
-                          <input class="abs" style="top: 1%;left: 77%;width: 19%;height: 3%;" type="text" name="13f" placeholder="13f">
-                          <input class="abs" style="top: 4.5%;left: 77%;width: 19%;height: 3%;" type="text" name="13g" placeholder="13g">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13h" placeholder="13h">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13i" placeholder="13i">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13j" placeholder="13j">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13k" placeholder="13k">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="13l" placeholder="13l">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="14a" placeholder="14a">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="14b" placeholder="14b">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15" placeholder="15">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15a" placeholder="15a">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15b" placeholder="15a">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15c" placeholder="15c">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15d" placeholder="15d">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15e" placeholder="15e">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15f" placeholder="">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15g" placeholder="15f">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15h" placeholder="15h">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="15i" placeholder="15i">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16a" placeholder="16a">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16b" placeholder="16b">
-                           <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16c" placeholder="16c">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16d" placeholder="16d">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="16e" placeholder="16e">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="17a" placeholder="17a">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="17b" placeholder="17b">
-                          <input class="abs" style="top: 1%;left: 1%;width: 1%;height:1%;" type="text" name="17c" placeholder="17c">
+                       <form id="form1" action="/form/save">
+                          <input class="abs" style="top: 3%;left: 4%;width: 47%;" type="text" name="13e" value="<%= @form_fields['13e']%>">
+                          <input class="abs" style="top: 1%;left: 77%;width: 19%;height: 3%;" type="text" name="13f" value="<%= @form_fields['13f']%>">
+                          <input class="abs" style="top: 4.5%;left: 77%;width: 19%;height: 3%;" type="text" name="13g" value="<%= @form_fields['13g']%>">
+                          <input class="abs" style="top: 10%;left: 4%;width: 32%;height: 8%;" type="text" name="13h" value="<%= @form_fields['13h']%>" >
+                          <input class="abs" style="top: 13%;left: 37%;width: 41%;eight: 5%;" type="text" name="13i" value="<%= @form_fields['13i']%>">
+                          <input class="abs" style="top: 12%;left: 79%;width: 15%;eight: 7%;" type="text" name="13j" value="<%= @form_fields['13j']%>">
+                          <input class="abs" style="top: 21%;left: 5%;width: 58%;height: 4%;" type="text" name="13k" value="<%= @form_fields['13k']%>">
+                          <input class="abs" style="top: 21%;left: 64%;width: 31%;height: 5%;" type="text" name="13l" value="<%= @form_fields['13l']%>">
+                          <input class="abs" style="top: 29%;left: 5%;width: 90%;height: 4%;%" type="text" name="14a" value="<%= @form_fields['14a']%>">
+                          <input class="abs" style="top: 36%;left: 5%;width: 45%;height: 4%;" type="text" name="14b" value="<%= @form_fields['14b']%>">
+                          <input <%= @form_fields['15']%> class="abs" style="top: 35%;left: 90%;width: 3%;height: 3%;" type="checkbox" name="15" value="checked">
+                          <input class="abs" style="top: 43%;left: 5%;width: 51%;height: 5%;" type="text" name="15a" value="<%= @form_fields['15a']%>">
+                          <input class="abs" style="top: 43%;left: 57%;width: 18%;height: 4.7%;" type="text" name="15b" value="<%= @form_fields['15b']%>">
+                          <input class="abs" style="top: 43%;left: 77%;width: 18%;height: 5%;" type="text" name="15c" value="<%= @form_fields['15c']%>">
+                          <input class="abs" style="top: 48%;left: 52%;width: 43%;height: 3.5%;" type="text" name="15d" value="<%= @form_fields['15d']%>">
+                          <input class="abs" style="top: 52%;left: 53%;width: 43%;height: 2.9%;" type="text" name="15e" value="<%= @form_fields['15e']%>">
+                          <input class="abs" style="top: 58%;left: 4%;width: 27%;height: 4%;" type="text" name="15f" value="<%= @form_fields['15f']%>">
+                          <input class="abs" style="top: 58%;left: 32%;width: 63%;height: 4.5%;" type="text" name="15g" value="<%= @form_fields['15g']%>">
+                          <input class="abs" style="top: 65%;left: 4%;width: 92%;height: 5%;" type="text" name="15h" value="<%= @form_fields['15h']%>">
+                          <input class="abs" style="top: 72%;left: 4%;width: 92%;height: 5%;" type="text" name="15i" value="<%= @form_fields['15i']%>">
+                          <input class="abs" style="top: 79%;left: 4%;width: 59%;height: 5%;" type="text" name="16a" value="<%= @form_fields['16a']%>">
+                          <input class="abs" style="top: 79%;left: 64%;width: 31%;height: 5%;" type="text" name="16b" value="<%= @form_fields['16b']%>">
+                          <input class="abs" style="top: 87%;left: 4%;width: 47%;height: 4%;" type="text" name="16c" value="<%= @form_fields['16c']%>">
+                          <input class="abs" style="top: 87%;left: 52%;width: 21%;height: 4.5%;" type="text" name="16d" value="<%= @form_fields['16d']%>">
+                          <input class="abs" style="top: 87%;left: 74%;width: 22%;height: 4%;" type="text" name="16e" value="<%= @form_fields['16e']%>">
+                          <input class="abs" style="top: 94%;left: 4%;width: 37%;height: 5%;" type="text" name="17a" value="<%= @form_fields['17a']%>">
+                          <input class="abs" style="top: 94%;left: 42%;width: 29%;height: 5%;" type="text" name="17b" value="<%= @form_fields['17b']%>">
+                          <input class="abs" style="top: 94%;left: 72%; width: 24%;height: 5%;" type="text" name="17c" value="<%= @form_fields['17c']%>">
+                          <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
+
                         </form>
                         
                     </div>
                     <div class="col-lg-6">
-                        <img width="100%" src="/
+                        <img width="100%" style="opacity: 0.2;" src="/
 media/form2.png" />
                     </div>
             </div>
@@ -339,7 +340,7 @@ div.rel {
 input.abs {
     display: block;
     position: absolute;
-   /* border: none;*/
+    border: none;
     color: #1a34ad;
     background:transparent;
 }
