--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -24,6 +24,8 @@
 
             </div>
             <!-- /.navbar-header -->
+            <button type="button" class="btn btn-primary header-button" onclick="document.getElementById('form1').submit();">Save Form</button>
+            <button type="button" onclick="history.back();" class="btn btn-warning header-button">Cancel</button>
 
             <ul class="nav navbar-top-links navbar-right">
                 <!--
