--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -268,31 +268,22 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href=""><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-                        </li>
-                        <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="">Foreign Person’s U.S. Source Income Subject to Withholding</a>
+                                    <a href="/form/show">Form 1042-S</a>
                                 </li>
                                 <li>
-                                    <a href="">Transfer of Stock Acquired Through an Employee Stock Purchase Plan Under Section 423(c)</a>
+                                    <a href="/form/show/8027">Form 8027</a>
                                 </li>
                                 <li>
-                                    <a href="">Employer's Annual Information Return of Tip Income and Allocated Tips</a>
+                                    <a href="/form/show/3922">Form 3922</a>
                                 </li>
                                 <li>
-                                    <a href="">Form W-2G Certain Gambling Winnings</a>
+                                    <a href="/form/show/fw2g">Form fw2g</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
-                        </li>
-                        <li>
-                            <a href=""><i class="fa fa-table fa-fw"></i> test</a>
-                        </li>
-                        <li>
-                            <a href=""><i class="fa fa-edit fa-fw"></i> Option 2</a>
                         </li>
                         
                         
