small layout changes nad bugs fixes

--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -37,7 +37,7 @@ media/form1.png" />
                           <input class="abs" style="top: 94%;left: 42%;width: 29%;height: 5%;" type="text" name="17b" value="<%= @form_fields['17b']%>">
                           <input class="abs" style="top: 94%;left: 72%; width: 24%;height: 5%;" type="text" name="17c" value="<%= @form_fields['17c']%>">
                           <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-
+                          <input type="hidden" name="form_name" value="1042-s"> 
                         </form>
                         
                     </div>
