--- a/app/views/forms/_form3922.html.erb
+++ b/app/views/forms/_form3922.html.erb
@@ -24,6 +24,10 @@ media/3922.png" />
                           <input class="abs" style="top: 22%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="7" value="" placeholder="7">
                           <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="8" value="" placeholder="8">
                           <input class="abs" style="top: 28.4%;left: 10%;width: 38%;height: 2%;" type="text" name="account_number" value="" placeholder="account_number">
+                          <input type="hidden" name="form_id" value="3922"> 
+                          <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
+
+
                         </form>
                         
                     </div>
