--- a/app/views/forms/_form8027.html.erb
+++ b/app/views/forms/_form8027.html.erb
@@ -1,29 +1,36 @@
 
             <div class="row">
-                    <div class="rel col-lg-12">
+                    <div class="rel col-lg-10">
                         <img width="100%" src="/
 media/8027.png" />
                        <form id="form1" action="/form/save">
-                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" type="text" name="corp_name" value="" placeholder="corp_name">
-                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="1" value="" placeholder="1">
-                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="2" value="" placeholder="2">
-                          <input class="abs" style="top: 13.6%;left: 9.5%;width: 19%;height: 3%;" type="text" name="corp_fin" value="" placeholder="corp_fin">
-                          <input class="abs" style="top: 13.6%;left: 29%;width: 19%;height: 3%;" type="text" name="empl_id" value="" placeholder="empl_id">
+                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" type="text" name="name_of_e" value="" placeholder="Name if establishment">
+                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="number_and_street" value="" placeholder="number_and_street">
+                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="city_state_zip" value="" placeholder="city_state_zip">
+                          <input class="abs" style="top: 13.6%;left: 9.5%;width: 19%;height: 3%;" type="text" name="employer_id" value="" placeholder="employer_id">
+                          <input class="abs" style="top: 13.6%;left: 29%;width: 19%;height: 3%;" type="text" name="employers_name" value="employers_name" placeholder="">
 
 
-                          <input class="abs" style="top: 15.7%;left: 48.5%;width: 16%;height: 2.5%;" type="text" name="3" value="" placeholder="3">
-                          <input class="abs" style="top: 15.7%;left: 64.3%;height: 2.4%;width: 16%;" type="text" name="4" value="" placeholder="4">
-                          <input class="abs" style="top: 19.2%;left: 48.3%;width: 16%;height: 2%;" type="text" name="5" value="" placeholder="5">
-                          <input class="abs" style="top: 19.2%;left: 64.4%;width: 16%;height: 2%;" type="text" name="6" value="" placeholder="6">
-                          <input class="abs" style="top: 17.6%;
-    left: 9.5%;
-    width: 38.5%;
-    height: 4%;" type="text" name="empl_name" value="" placeholder="empl_name">
+                          <input class="abs" style="top: 15.7%;left: 48.5%;width: 16%;height: 2.5%;" type="text" name="number_and_street" value="" placeholder="number_and_street">
+                          <input class="abs" style="top: 15.7%;left: 64.3%;height: 2.4%;width: 16%;" type="text" name="foreign_city_state_zip" value="foreign_city_state_zip" placeholder="">
+                          <input class="abs" style="top: 19.2%;left: 48.3%;width: 16%;height: 2%;" type="text" name="apt_no" value="" placeholder="apt_no">
+                          <input class="abs" style="top: 19.2%;left: 64.4%;width: 16%;height: 2%;" type="text" name="establishment_number" value="" placeholder="establishment_number">
 
-                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="street_address" value="" placeholder="street_address">
-                          <input class="abs" style="top: 22%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="7" value="" placeholder="7">
-                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="8" value="" placeholder="8">
-                          <input class="abs" style="top: 28.4%;left: 10%;width: 38%;height: 2%;" type="text" name="account_number" value="" placeholder="account_number">
+
+                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 38.5%;height: 4%;" type="text" name="1" value="" placeholder="1">
+                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="2" value="" placeholder="2">
+                          <input class="abs" style="top: 22%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="3" value="" placeholder="3">
+                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="4a" value="" placeholder="4a">
+                          <input class="abs" style="top: 29.4%;left: 10%;width: 38%;height: 2%;" type="text" name="4b" value="" placeholder="4b">
+                          <input class="abs" style="top: 30.4%;left: 10%;width: 38%;height: 2%;" type="text" name="4c" value="" placeholder="4c">
+                          <input class="abs" style="top: 31.4%;left: 10%;width: 38%;height: 2%;" type="text" name="5" value="" placeholder="5">
+                          <input class="abs" style="top: 32.4%;left: 10%;width: 38%;height: 2%;" type="text" name="6" value="" placeholder="6">
+                          <input class="abs" style="top: 33.4%;left: 10%;width: 38%;height: 2%;" type="text" name="7" value="" placeholder="7">
+                         
+                          <input type="hidden" name="form_id" value="8027"> 
+                          <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
+
+
                         </form>
                         
                     </div>
