--- a/app/views/forms/_formfw2g.html.erb
+++ b/app/views/forms/_formfw2g.html.erb
@@ -1,29 +1,50 @@
 
             <div class="row">
-                    <div class="rel col-lg-12">
+                    <div class="rel col-lg-10">
                         <img width="100%" src="/
 media/fw2g.png" />
                        <form id="form1" action="/form/save">
-                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" type="text" name="corp_name" value="" placeholder="corp_name">
-                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="1" value="" placeholder="1">
-                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="2" value="" placeholder="2">
-                          <input class="abs" style="top: 13.6%;left: 9.5%;width: 19%;height: 3%;" type="text" name="corp_fin" value="" placeholder="corp_fin">
-                          <input class="abs" style="top: 13.6%;left: 29%;width: 19%;height: 3%;" type="text" name="empl_id" value="" placeholder="empl_id">
+                           <input class="abs" style="top: 9%;left: 3%;w;width: 43%;height: 21%;" type="text" name="payers_details" value="payers_details" placeholder="">
+                          <input class="abs" style="top: 32%;left: 3%;width: 22%;height: 11%;/* display: block; */" type="text" name="payers_fdi" value="payers_fdi" placeholder="">
+                          <input class="abs" style="top: 32%;left: 25%;w;width: 21.5%;height: 11%;/* display: block; */k;" type="text" name="payers_phone" value="payers_phone" placeholder="">
+                          <input class="abs" style="top: 46%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" type="text" name="winners_name" value="winners_name" placeholder="">
+                          <input class="abs" style="top: 56%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" type="text" name="street_address" value="street_address" placeholder="">
+
+                          <!-- VVVVVV -->
+                          <input class="abs" style="top: 11%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="city_state_country_zip" value="city_state_country_zip" placeholder="">
+                          <input class="abs" style="top: 12%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="" value="" placeholder="">
+                          <input class="abs" style="top: 13%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="" value="" placeholder="">
+
+                          <input class="abs" style="top: 15%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="1" value="1" placeholder="">
+                          <input class="abs" style="top: 16.2%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="2" value="2" placeholder="">
+                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 19%;height: 3%;" type="text" name="3" value="3" placeholder="">
+                          <input class="abs" style="top: 18.6%;left: 29%;width: 19%;height: 3%;" type="text" name="4" value="4" placeholder="">
+                          <input class="abs" style="top: 19.7%;left: 48.5%;width: 16%;height: 2.5%;" type="text" name="5" value="5" placeholder="">
+                          <input class="abs" style="top: 20.7%;left: 64.3%;height: 2.4%;width: 16%;" type="text" name="6" value="6" placeholder="">
+                          <input class="abs" style="top: 21.2%;left: 48.3%;width: 16%;height: 2%;" type="text" name="7" value="7" placeholder="">
+                          <input class="abs" style="top: 22.2%;left: 64.4%;width: 16%;height: 2%;" type="text" name="8" value="8" placeholder="">
+                          <input class="abs" style="top: 23.6%;left: 9.5%;width: 38.5%;height: 4%;" type="text" name="9" value="9" placeholder="">
+
+                          <input class="abs" style="top: 24.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="10" value="10" placeholder="">
+                          <input class="abs" style="top: 25%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="11" value="11" placeholder="">
+                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="12" value="12" placeholder="">
+                          <input class="abs" style="top: 29.4%;left: 10%;width: 38%;height: 2%;" type="text" name="13" value="13" placeholder="">
+
+                          <input class="abs" style="top: 30.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="14" value="14" placeholder="">
+                          <input class="abs" style="top: 31.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="15" value="15" placeholder="">
+                          <input class="abs" style="top: 32.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="16" value="16" placeholder="">
+                          <input class="abs" style="top: 33.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="17" value="17" placeholder="">
+                          <input class="abs" style="top: 34.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="18" value="18" placeholder="">
+                          <input class="abs" style="top: 35.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="data" value="data" placeholder="">
+                          <input class="abs" style="top: 36.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="" value="" placeholder="">
+                          <input class="abs" style="top: 37.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="" value="" placeholder="">
+                          <input class="abs" style="top: 38.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="" value="" placeholder="">
+                          <input class="abs" style="top: 39.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="" value="" placeholder="">
+
+                          <input type="hidden" name="form_id" value="fw2g"> 
+                          <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
 
 
-                          <input class="abs" style="top: 15.7%;left: 48.5%;width: 16%;height: 2.5%;" type="text" name="3" value="" placeholder="3">
-                          <input class="abs" style="top: 15.7%;left: 64.3%;height: 2.4%;width: 16%;" type="text" name="4" value="" placeholder="4">
-                          <input class="abs" style="top: 19.2%;left: 48.3%;width: 16%;height: 2%;" type="text" name="5" value="" placeholder="5">
-                          <input class="abs" style="top: 19.2%;left: 64.4%;width: 16%;height: 2%;" type="text" name="6" value="" placeholder="6">
-                          <input class="abs" style="top: 17.6%;
-    left: 9.5%;
-    width: 38.5%;
-    height: 4%;" type="text" name="empl_name" value="" placeholder="empl_name">
-
-                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="street_address" value="" placeholder="street_address">
-                          <input class="abs" style="top: 22%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="7" value="" placeholder="7">
-                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="8" value="" placeholder="8">
-                          <input class="abs" style="top: 28.4%;left: 10%;width: 38%;height: 2%;" type="text" name="account_number" value="" placeholder="account_number">
                         </form>
                         
                     </div>
