--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -1,3 +1,4 @@
+<%# @submissions.inspect %>
 <div class="row">
                     <div class="header col-lg-12">
                         <br/>
@@ -13,7 +14,7 @@
                             <% @submissions.each do |submission| %>
                               <tr>
                                 <td>
-                                  <%= link_to 'Form submitted at '+submission.updated_at.to_s, controller: "forms", action: "show", unique_id: submission.unique_id %>
+                                  <%= link_to 'Form '+submission.form_id.to_s+' submitted at '+submission.updated_at.to_s, controller: "forms", action: "show", unique_id: submission.unique_id, formname: submission.form_id %>
                                 </td>
                               </tr>
                             <% end %>
@@ -23,11 +24,7 @@
                                     <br />
                                 </td>
                             </tr>
-                            <tr>
-                              <td>
-                                    <a href="form/new">New Form</form>
-                              </td>
-                            </tr>
+                            
                           </tbody>
                         </table>
                         
