--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -158,10 +158,12 @@
                 </li>
               -->
                 <!-- /.dropdown -->
+<!--
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
+
                     <ul class="dropdown-menu dropdown-alerts">
                         <li>
                             <a href="#">
@@ -215,8 +217,8 @@
                             </a>
                         </li>
                     </ul>
-                    <!-- /.dropdown-alerts -->
                 </li>
+-->
                 <!-- /.dropdown -->
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -254,6 +256,7 @@
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
+<!--
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
                                 <input type="text" class="form-control" placeholder="Search...">
@@ -263,10 +266,14 @@
                                 </button>
                             </span>
                             </div>
-                            <!-- /input-group -->
                         </li>
+-->
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Forms<span class="fa arrow"></span></a>
+                            <a href="/form/index"><i class="fa fa-list-ul fa-fw"></i> Saved Forms</a>
+                        </li>
+
+                        <li>
+                            <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="/form/show">Form 1042-S</a>
