--- a/app/views/forms/_form8027.html.erb
+++ b/app/views/forms/_form8027.html.erb
@@ -4,32 +4,50 @@
                         <img width="100%" src="/
 media/8027.png" />
                        <form id="form1" action="/form/save">
-                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" type="text" name="name_of_e" value="" placeholder="Name if establishment">
-                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="number_and_street" value="" placeholder="number_and_street">
-                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="city_state_zip" value="" placeholder="city_state_zip">
-                          <input class="abs" style="top: 13.6%;left: 9.5%;width: 19%;height: 3%;" type="text" name="employer_id" value="" placeholder="employer_id">
-                          <input class="abs" style="top: 13.6%;left: 29%;width: 19%;height: 3%;" type="text" name="employers_name" value="employers_name" placeholder="">
+                          
+                          <input class="abs" style="top: 8%;left: 18%;width: 30%;height: 2.4%;" name="name_of_e" value="<%= @form_fields['name_of_e']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 11.5%;left: 17.9%;width: 30.5%;height: 2%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 15.2%;left: 18%;width: 58.5%;height: 2%;" name="city_state_zip" value="<%= @form_fields['city_state_zip']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 8%;left: 77.5%;width: 20%;height: 2.5%;" name="employer_id" value="<%= @form_fields['employer_id']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 25.6%;left: 2.5%;width: 74%;height: 2%;" name="employers_name" value="<%= @form_fields['employers_name']%>" placeholder="" type="text">
 
 
-                          <input class="abs" style="top: 15.7%;left: 48.5%;width: 16%;height: 2.5%;" type="text" name="number_and_street" value="" placeholder="number_and_street">
-                          <input class="abs" style="top: 15.7%;left: 64.3%;height: 2.4%;width: 16%;" type="text" name="foreign_city_state_zip" value="foreign_city_state_zip" placeholder="">
-                          <input class="abs" style="top: 19.2%;left: 48.3%;width: 16%;height: 2%;" type="text" name="apt_no" value="" placeholder="apt_no">
-                          <input class="abs" style="top: 19.2%;left: 64.4%;width: 16%;height: 2%;" type="text" name="establishment_number" value="" placeholder="establishment_number">
+                          <input class="abs" style="top: 28.5%;left: 2.5%;width: 64%;height: 2.5%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 32.2%;left: 2.5%;height: 2%;width: 75%;" name="foreign_city_state_zip" value="<%= @form_fields['foreign_city_state_zip']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 28.5%;left: 67.3%;width: 10%;height: 2.5%;/*! border: 1px solid; */" name="apt_no" value="<%= @form_fields['apt_no']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 27.2%;left: 77.4%;width: 20%;height: 4%;/*! border: 1px solid; */" name="establishment_number" value="<%= @form_fields['establishment_number']%>" placeholder="" type="text">
 
 
-                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 38.5%;height: 4%;" type="text" name="1" value="" placeholder="1">
-                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="2" value="" placeholder="2">
-                          <input class="abs" style="top: 22%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="3" value="" placeholder="3">
-                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="4a" value="" placeholder="4a">
-                          <input class="abs" style="top: 29.4%;left: 10%;width: 38%;height: 2%;" type="text" name="4b" value="" placeholder="4b">
-                          <input class="abs" style="top: 30.4%;left: 10%;width: 38%;height: 2%;" type="text" name="4c" value="" placeholder="4c">
-                          <input class="abs" style="top: 31.4%;left: 10%;width: 38%;height: 2%;" type="text" name="5" value="" placeholder="5">
-                          <input class="abs" style="top: 32.4%;left: 10%;width: 38%;height: 2%;" type="text" name="6" value="" placeholder="6">
-                          <input class="abs" style="top: 33.4%;left: 10%;width: 38%;height: 2%;" type="text" name="7" value="" placeholder="7">
+                          <input class="abs" style="top: 36.3%;left: 80%;width: 13.5%;height: 3.5%;border: 1px solid blue;" name="1" value="<%= @form_fields['1']%>" placeholder="" type="text">
+
+                          
+                          
+                          <input class="abs" style="top: 8%;left: 18%;width: 30%;height: 2.4%;" name="name_of_e" value="<%= @form_fields['name_of_e']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 11.5%;left: 17.9%;width: 30.5%;height: 2%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 15.2%;left: 18%;width: 58.5%;height: 2%;" name="city_state_zip" value="<%= @form_fields['city_state_zip']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 8%;left: 77.5%;width: 20%;height: 2.5%;" name="employer_id" value="<%= @form_fields['employer_id']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 25.6%;left: 2.5%;width: 74%;height: 2%;" name="employers_name" value="<%= @form_fields['employers_name']%>" placeholder="" type="text">
+
+
+                          <input class="abs" style="top: 28.5%;left: 2.5%;width: 64%;height: 2.5%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 32.2%;left: 2.5%;height: 2%;width: 75%;" name="foreign_city_state_zip" value="<%= @form_fields['foreign_city_state_zip']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 28.5%;left: 67.3%;width: 10%;height: 2.5%;/*! border: 1px solid; */" name="apt_no" value="<%= @form_fields['apt_no']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 27.2%;left: 77.4%;width: 20%;height: 4%;/*! border: 1px solid; */" name="establishment_number" value="<%= @form_fields['establishment_number']%>" placeholder="" type="text">
+
+
+                          <input class="abs" style="top: 36.3%;left: 80%;width: 13.5%;height: 3.5%;border: 1px solid blue;" name="1" value="<%= @form_fields['1']%>" placeholder="" type="text">
+                          
+                          <input class="abs" style="top: 39.6%;left: 80%;width: 13.5%;height: 3.5%;" name="2" value="<%= @form_fields['2']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 43.1%;left: 80%;width: 13.5%;height: 3.5%;" name="3" value="<%= @form_fields['3']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 46.5%;left: 80%;width: 13.5%;height: 3.5%;" name="4a" value="<%= @form_fields['4a']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 49.8%;left: 80%;width: 13.5%;height: 3.5%;" name="4b" value="<%= @form_fields['4b']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 53.6%;left: 80%;width: 13.5%;height: 4.7%;" name="4c" value="<%= @form_fields['4c']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 58.5%;left: 80%;width: 13.5%;height: 3.5%;" name="5" value="<%= @form_fields['5']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 62%;left: 80%;width: 13.5%;height: 3.5%;" name="6" value="<%= @form_fields['6']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 65.3%;left: 80%;width: 13.5%;height: 7%;" name="7" value="<%= @form_fields['7']%>" placeholder="" type="text">
                          
-                          <input type="hidden" name="form_id" value="8027"> 
-                          <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-
+                          <input name="form_id" value="8027" type="hidden"> 
+                          <input name="unique_id" value="<%= @form_fields['unique_id'] %>" type="hidden">
 
                         </form>
                         
@@ -37,3 +55,4 @@ media/8027.png" />
             </div>
             <!-- /.row -->
 
+<%= @form_fields['']%>
