the form layout fixed

--- a/app/views/forms/_formfw2g.html.erb
+++ b/app/views/forms/_formfw2g.html.erb
@@ -4,38 +4,38 @@
                         <img width="100%" src="/
 media/fw2g.png" />
                        <form id="form1" action="/form/save">
-                           <input class="abs" style="top: 9%;left: 3%;w;width: 43%;height: 21%;" type="text" name="payers_details" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 32%;left: 3%;width: 22%;height: 11%;/* display: block; */" type="text" name="payers_fdi" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 32%;left: 25%;w;width: 21.5%;height: 11%;/* display: block; */k;" type="text" name="payers_phone" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 46%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" type="text" name="winners_name" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 56%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" type="text" name="street_address" value="<%= @form_fields['']%>" placeholder="">
+                           <input class="abs" style="top: 9%;left: 3%;w;width: 43%;height: 21%;" name="payers_details" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 32%;left: 3%;width: 22%;height: 11%;/* display: block; */" name="payers_fdi" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 32%;left: 25%;w;width: 21.5%;height: 11%;/* display: block; */k;" name="payers_phone" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 46%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" name="winners_name" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 56%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" name="street_address" value="" placeholder="" type="text">
 
                           <!-- VVVVVV -->
-                          <input class="abs" style="top: 11%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="city_state_country_zip" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 12%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 13%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="" value="<%= @form_fields['']%>" placeholder="">
+                          <input class="abs" style="top: 74%;left: 2.9%;width: 43.5%;height: 8.3%;/*! border: 1px solid; */" name="city_state_country_zip" value="" placeholder="" type="text">
 
-                          <input class="abs" style="top: 15%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="1" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 16.2%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="2" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 19%;height: 3%;" type="text" name="3" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 18.6%;left: 29%;width: 19%;height: 3%;" type="text" name="4" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 19.7%;left: 48.5%;width: 16%;height: 2.5%;" type="text" name="5" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 20.7%;left: 64.3%;height: 2.4%;width: 16%;" type="text" name="6" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 21.2%;left: 48.3%;width: 16%;height: 2%;" type="text" name="7" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 22.2%;left: 64.4%;width: 16%;height: 2%;" type="text" name="8" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 23.6%;left: 9.5%;width: 38.5%;height: 4%;" type="text" name="9" value="<%= @form_fields['']%>" placeholder="">
+                          
 
-                          <input class="abs" style="top: 24.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="10" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 25%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="11" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="12" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 29.4%;left: 10%;width: 38%;height: 2%;" type="text" name="13" value="<%= @form_fields['']%>" placeholder="">
+                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.9%;height: 7%;/*! border: 1px solid; */" name="1" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 6.2%;left: 65.5%;width: 17.5%;height: 7.2%;/*! border: 1px solid; */" name="2" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 15.6%;left: 47%;width: 18%;height: 4%;/*! border: 1px solid; */" name="3" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 15.6%;left: 67.4%;width: 15.5%;height: 4%;/*! border: 1px solid; */" name="4" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 22.7%;left: 47.5%;width: 17.2%;height: 3.3%;/*! border: 1px solid; */" name="5" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 22.6%;left: 65.6%;height: 3.5%;width: 17%;/*! border: 1px solid; */" name="6" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 29.2%;left: 49.3%;width: 15.5%;height: 4%;/*! border: 1px solid; */" name="7" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 29.2%;left: 65.4%;width: 17.3%;height: 4%;/*! border: 1px solid; */" name="8" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 36.2%;left: 47%;width: 18%;height: 7%;/*! border: 1px solid; */" name="9" value="" placeholder="" type="text">
 
-                          <input class="abs" style="top: 30.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="14" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 31.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="15" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 32.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="16" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 33.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="17" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 34.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="18" value="<%= @form_fields['']%>" placeholder="">
-                          <input class="abs" style="top: 35.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="data" value="<%= @form_fields['']%>" placeholder="">
+                          <input class="abs" style="top: 36.3%;left: 65.5%;width: 17.5%;height: 6.8%;/*! border: 1px solid; */" name="10" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 46%;left: 47%;width: 18%;height: 6.6%;/*! border: 1px solid black; */" name="11" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 46%;left: 65.5%;width: 17.5%;height: 6.9%;/*! border: 1px solid; */" name="12" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 56.4%;left: 47.3%;width: 17%;height: 6%;/*! border: 1px solid black; */" name="13" value="" placeholder="" type="text">
+
+                          <input class="abs" style="top: 56%;left: 67.5%;width: 15.5%;height: 6.3%;/*! border: 1px solid; */" name="14" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 66.3%;left: 49.5%;width: 15%;height: 6.3%;/*! border: 1px solid; */" name="15" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 65.7%;left: 67.5%;width: 15.5%;height: 7.3%;/*! border: 1px solid; */" name="16" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 75.3%;left: 49.5%;width: 15%;height: 7.3%;/*! border: 1px solid; */" name="17" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 75.3%;left: 65.5%;width: 18%;height: 7.3%;/*! border: 1px solid; */" name="18" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 88.3%;left: 65%;width: 32%;hight: 2.3%;" name="date" value="" placeholder="" type="text">
                           
 
                           <input type="hidden" name="form_id" value="fw2g"> 
