--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -273,7 +273,7 @@
                             <a href="/form/index"><i class="fa fa-list-ul fa-fw"></i> Saved Forms</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Forms<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="/form/show">Form 1042-S</a>
