--- a/app/views/forms/_form3922.html.erb
+++ b/app/views/forms/_form3922.html.erb
@@ -21,6 +21,35 @@ media/3922.png" />
                           <input class="abs" style="top: 22%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="7" value="<%= @form_fields['7']%>" placeholder="">
                           <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="8" value="<%= @form_fields['8']%>" placeholder="">
                           <input class="abs" style="top: 28.4%;left: 10%;width: 38%;height: 2%;" type="text" name="account_number" value="<%= @form_fields['account_number']%>" placeholder="">
+
+                          <!-- checkboxes -->
+
+                          <input  type="hidden" name="" value="unchecked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['amended_return']%> value="checked">
+
+                           <input  type="hidden" name="" value="unchecked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['final_return']%> value="checked">
+
+                          <input  type="hidden" name="" value="unchecked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['evening_meals_only']%> value="checked">
+
+                          <input  type="hidden" name="" value="unchecked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['evening_other_meals']%> value="checked">
+
+                          <input  type="hidden" name="" value="unchecked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['other_than_evening_meals']%> value="checked">
+
+                          <input  type="hidden" name="" value="unchecked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['alcoholic_beverages']%> value="checked">
+
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['establishment_accept_cc']%> value="yes">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['establishment_accept_cc']%> value="no">
+                          
+                          <!-- add three more -->
+
+                          <!-- end checkboxes -->
+
+
                           <input type="hidden" name="form_id" value="3922"> 
                           <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
 
