fixed small issue with deleting

--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -1,8 +1,14 @@
 
             <div class="row">
-                    <div class="header col-lg-12">
+                    <div class=col-lg-3">
+                       nbsp;
+                    </div>
+                 <div class="header col-lg-16">
                         <img width="100%"  src="/
 media/form_header.png" />
+                    </div> 
+                    <div class=col-lg-3">
+                       nbsp;
                     </div>
                     <div class="rel col-lg-6">
                         <img width="100%" src="/
@@ -42,13 +48,34 @@ media/form1.png" />
                         </form>
                         
                     </div>
-                    <div class="col-lg-6">
-                        <img width="100%" style="opacity: 0.2;" src="/
-media/form2.png" />
-                    </div>
+                    
             </div>
             <!-- /.row -->
 <style>
 
 </style>
+<!-- Button trigger modal -->
+
+<i class="fa fa-question-circle" aria-hidden="true" data-toggle="modal" data-target="#exampleModalLong"></i>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
