--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -16,7 +16,7 @@
                                 <td>
                                   <%= link_to 'Form '+submission.form_id.to_s+' submitted at '+submission.updated_at.to_s, controller: "forms", action: "show", unique_id: submission.unique_id, formname: submission.form_id %>
                                    <%# link_to 'delete form', controller: "forms", action: "destroy", unique_id: submission.unique_id, class: 'delete_link' %>
-                                   <%= link_to 'form/'+submission.unique_id, method: :delete, data: {confirm: 'Are you sure?'}, class: 'link-delete', :remote => true do %>
+                                   <%= link_to '/form/'+submission.unique_id, method: :delete, data: {confirm: 'Are you sure?'}, class: 'link-delete', :remote => true do %>
                                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                                    <% end %>
 
