--- a/app/views/forms/_form8027.html.erb
+++ b/app/views/forms/_form8027.html.erb
@@ -1,4 +1,6 @@
-
+<a class="instructions" href="/media/i8027.pdf" target="_blank"><i class="fa fa-question-circle" ></i>  Download Instructions</a>
+<br/>
+<br/>
             <div class="row">
                     <div class="rel col-lg-10">
                         <img width="100%" src="/
