--- a/app/views/forms/_formfw2g.html.erb
+++ b/app/views/forms/_formfw2g.html.erb
@@ -1,3 +1,5 @@
+<a href="/media/iw2g.pdf" class="instructions" aria-hidden="true" target="_blank"><i class="fa fa-question-circle" ></i>  
+Download Instructions</a>
 
             <div class="row">
                     <div class="rel col-lg-10">
