--- a/app/views/forms/_form3922.html.erb
+++ b/app/views/forms/_form3922.html.erb
@@ -1,4 +1,5 @@
-
+<a class="instructions" href="/media/i3921.pdf" target="_blank"><i class="fa fa-question-circle" ></i>  Download Instructions</a>
+<br/>
             <div class="row">
                     <div class="rel col-lg-12">
                         <img width="100%" src="/
